Hopefully fixed weird iphone calendar menu button alignment

--- a/src/components/CalendarMenu/CalendarMenu.css
+++ b/src/components/CalendarMenu/CalendarMenu.css
@@ -28,7 +28,7 @@
 .react-add-to-calendar__wrapper {
   position: relative;
   margin-top: 10px;
-  z-index: 2;
+  text-align: center;
 }
 
 .CalendarMenu_container_open
@@ -40,13 +40,13 @@
 }
 
 .react-add-to-calendar__button span {
-  padding: 30px 25px 15px;
+  padding: 30px 35px 15px 35px;
   font-weight: 600;
 }
 
 .react-add-to-calendar__dropdown {
   position: absolute;
-  z-index: 1;
+  display: inline-block;
   top: 14px;
   left: 0;
   right: 0;
@@ -74,7 +74,7 @@
 
 @media only screen and (max-width: 700px) {
   .CalendarMenu_container {
-    width: 225px;
+    width: 250px;
     height: 50px;
   }
 
